<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgr_lg"
    tools:context=".view.fragment.GoToSettingFragment">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="10dp"
        android:src="@drawable/ic_back"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintHeight_percent="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/setting_title"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/img_back"
        app:layout_constraintTop_toTopOf="@id/img_back" />

    <ImageView
        android:id="@+id/img_setting"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_setting"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_back"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/tv_head"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/storage_permission_is_required_to_access_this_feature_please_grant_permission_to_continue"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_setting"
        app:layout_constraintWidth_percent="0.7" />

    <TextView
        android:id="@+id/tv_step_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/_1_tap_quot_go_to_settings_quot_to_open_the_app"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_head"
        app:layout_constraintWidth_percent="0.55" />

    <TextView
        android:id="@+id/tv_step_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_2_choose_permissions"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/tv_step_1"
        app:layout_constraintStart_toStartOf="@id/tv_step_1"
        app:layout_constraintTop_toBottomOf="@id/tv_step_1" />

    <TextView
        android:id="@+id/tv_step_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_3_tap_photo_and_video"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/tv_step_2"
        app:layout_constraintStart_toStartOf="@id/tv_step_2"
        app:layout_constraintTop_toBottomOf="@id/tv_step_2" />

    <TextView
        android:id="@+id/tv_step_micro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_3_tap_microphone"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/tv_step_2"
        app:layout_constraintStart_toStartOf="@id/tv_step_2"
        app:layout_constraintTop_toBottomOf="@id/tv_step_2" />

    <TextView
        android:id="@+id/tv_step_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_4_tap_music_and_audio"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/tv_step_3"
        app:layout_constraintStart_toStartOf="@id/tv_step_3"
        app:layout_constraintTop_toBottomOf="@id/tv_step_3" />

    <TextView
        android:id="@+id/tv_once"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/once_permission_is_granted_return_to_the_app"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/tv_go_to_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_step_2"
        app:layout_constraintWidth_percent="0.7" />

    <TextView
        android:id="@+id/tv_go_to_settings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/background_boder_white"
        android:gravity="center"
        android:text="@string/go_to_settings"
        android:textColor="@color/pink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_once"
        app:layout_constraintWidth_percent="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>