<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    tools:context=".appPurchases.PurchasesActivity">

    <LinearLayout
        android:layout_weight="8"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/purchase_boder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/img_closePurchases"
            android:layout_gravity="end"
            android:src="@drawable/ic_close"
            android:layout_width="50dp"
            android:layout_height="50dp"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@drawable/boder_img_app"
            android:clipToOutline="true"
            android:foreground="@drawable/border_img_logo"
            android:scaleType="fitXY"
            android:src="@drawable/logo" />
        <TextView
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:textSize="24sp"
            android:text="@string/full_access"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="6dp"
            android:layout_gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/mirror_screen_to_tv"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <TextView
            android:layout_gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/tv_keyboard_input_voice_search"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <TextView
            android:layout_gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/unlock_channels_switching"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <TextView
            android:layout_gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/_100_no_ads"
            android:textColor="@color/black"
            android:textSize="20sp" />
    <LinearLayout
        android:gravity="bottom"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:gravity="center"
            android:text="@string/try_3_days_for_free"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:gravity="center"
            android:text="@string/then_750_000_year_after_trial_ands"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:id="@+id/startFree"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/boder_blue_10">
            <TextView
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/start_free_trial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/monthly"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/boder_blue_10">
            <TextView
                android:layout_marginStart="20dp"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/monthly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lifeTime"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/boder_oriagan_10">
            <TextView
                android:layout_marginStart="20dp"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/lifetime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_weight="2"
        android:paddingStart="4dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="start"
        android:text="@string/subscriptions_are_managed_via_your_google_play_billing_and_will_renew_automatically_unless_canceled_at_least_24_hours_befoce_the_end_of_the_current_period_you_can_manage_your_subscriptions_in_account_setting_after_purchase"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>
</LinearLayout>