<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/connected_device"/>
    <TextView
        android:gravity="center"
        android:id="@+id/textNameDevice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp" />
    <LinearLayout
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:layout_marginRight="10dp"
            android:textColor="@color/red"
            android:backgroundTint="@color/white"
            android:id="@+id/btnDisconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disconnect"/>
        <Button
            android:textColor="@color/blue"
            android:backgroundTint="@color/white"
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>

    </LinearLayout>
</LinearLayout>
