<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="30sp"
    android:layout_gravity="center"
    android:id="@+id/linerLayout"
    android:layout_marginEnd="30sp"
    android:layout_marginBottom="10dp"
    android:layout_height="wrap_content">
    <TextView
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/enter_the_pin_code_to_connect"
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
   <EditText
       android:id="@+id/edt_pinCode"
       android:layout_marginTop="10dp"
       android:layout_marginBottom="10dp"
       android:padding="10dp"
       android:inputType="number"
       android:hint="@string/pin_code"
       android:layout_width="match_parent"
       android:layout_height="50dp"/>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginEnd="10dp"
            android:id="@+id/btn_cancel_connect"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:textStyle="bold"
                android:textColor="@color/red"
                android:layout_marginEnd="5dp"
                android:textSize="20sp"
                android:text="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/btn_ok_connect"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:layout_marginEnd="5dp"
                android:textSize="20sp"
                android:text="@string/ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>