<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="40dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/color_d3caca"
        app:cardCornerRadius="10dp"
        app:strokeWidth="0dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/connecting"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/enter_the_code_shown_on_your_tv"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edt_pin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="24dp"
                android:inputType="phone"
                android:layout_marginTop="8dp"
                android:background="@drawable/border_radius_24"
                android:gravity="center"
                android:textSize="16sp"
                tools:ignore="TextFields" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:paddingHorizontal="30dp">

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginVertical="8dp"
                    android:background="@drawable/border_radius_24"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/btn_continue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginVertical="8dp"
                    android:background="@drawable/border_radius_24"
                    android:backgroundTint="@color/color_2196f3"
                    android:text="@string/okay"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />
            </FrameLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
</FrameLayout>