<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipe_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgr_lg"
        android:orientation="vertical"
        android:padding="10dp">

        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/nameDV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="60dp"
                    android:layout_marginStart="10dp"
                    android:ellipsize="end"
                    android:lines="1"
                    android:gravity="center"
                    android:text="@string/apps"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/img_cast"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/ic_cast" />
            </RelativeLayout>
        </Toolbar>

        <LinearLayout
            android:id="@+id/linear_favourite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout4">

            <TextView
                android:id="@+id/tv_favourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favourite_channels"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_favourite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/color_app" />

        <LinearLayout
            android:id="@+id/linear_channel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/linear_favourite">

            <TextView
                android:id="@+id/tv_Channel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_channels"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_channel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_no_connect"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottieAnimationView_load"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                app:lottie_autoPlay="true"
                app:lottie_rawRes="@raw/no_connected"
                app:lottie_repeatCount="10000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/no_connected_device"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_connect"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:layout_marginTop="80dp"
                android:background="@drawable/background_gradient"
                android:text="@string/click_connect"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>